--- a/helpdesk-backend/src/main/resources/application.properties
+++ b/helpdesk-backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=helpdesk-backend
 
-# Database Config
+# Conexão com o banco
 spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-# JPA / Hibernate
+# Hibernate - Aqui ele cria as tabelas sozinho baseado nas suas classes
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
